<resources>
    <string name="app_name">Карточка студента</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="Surname">Surname</string>
    <string name="Name">Name</string>
    <string name="Disc">Discipline</string>
    <string name="Mark">Mark</string>
    <string name="Login">Username</string>
    <string name="Password">Password</string>
    <string name="Enter">Log in</string>
    <string name="Autoriz">Sign in</string>
    <string name="User">Вы зашли в программу</string>
</resources>