<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainAdmin">
    <EditText
        android:id="@+id/Surname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/Surname"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/Name"/>
    <EditText
        android:id="@+id/Name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/Name"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Surname"
        app:layout_constraintBottom_toTopOf="@id/Disc"/>
    <EditText
        android:id="@+id/Disc"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/Disc"
        android:textSize="10pt"
        app:layout_constraintEnd_toStartOf="@id/Mark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Name"
        app:layout_constraintBottom_toTopOf="@id/btnAdd"/>
    <EditText
        android:id="@+id/Mark"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/Mark"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Disc"
        app:layout_constraintTop_toBottomOf="@id/Name"
        app:layout_constraintBottom_toTopOf="@id/btnClear"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Disc"
        app:layout_constraintBottom_toTopOf="@id/dbOutput"/>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toBottomOf="@id/Mark"
        app:layout_constraintBottom_toTopOf="@id/dbOutput"/>

    <TableLayout
        android:id="@+id/dbOutput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClear">

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>